<resources>
    <string name="app_name">EVthai</string>
    <string name="login">Login</string>
    <string name="user">Username</string>
    <string name="your_name">Name</string>
    <string name="your_e_mail_address">E-mail</string>
    <string name="telephone_number">Telephone number</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Save</string>
    <string name="up_date">Up date</string>
    <string name="log_out">Log Out</string>
    <string name="cardNo">Card No.</string>
    <string name="creat_new_username">Creat new email</string>
    <string name="creat_new_password">Creat new password</string>
    <string name="chargerid">ChargerID</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="or_sing_up">or Sing up</string>
    <string name="sing_up">Sing up</string>
    <string name="confirm">Confirm</string>
    <string name="edit_user_profile">Edit user profile</string>
    <string name="location">Location :</string>
    <string name="title">Title :</string>
    <string name="e_mail">E-mail</string>
    <string name="remember_me">Remember me</string>
    <string name="last_name">Last name</string>

    <!-- TH -->
    <string name="thAddress">ที่ตั้ง :</string>
    <string name="thBrand">ยี่ห้อ,รุ่น :</string>
    <string name="thNozzle">หัวจ่าย :</string>
    <string name="thNozzleNoCom">หัวจ่าย</string>
    <string name="thStatus">สถานะ</string>
    <string name="thStartChag">เริ่มต้นชาร์ต</string>
    <string name="thStoptChag">สิ้นสุดการชาร์ต</string>
    <string name="thEndMeter">มิเตอร์สิ้นสุด</string>
    <string name="thUpdateList">อัพเดทรายการล่าสุด</string>
    <string name="thConnect">เชื่อมต่อ</string>
    <string name="thDisConnect">ขาดการติดต่อ</string>
    <string name="thLastConnect">เวลาสื่อสารล่าสุด :</string>
    <string name="model">Model :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner">Owner : </string>
    <string name="type">Type : </string>
    <string name="ev_status">Ev Status : </string>
    <string name="distance">Distance : </string>
    <string name="km">KM</string>

</resources>
