<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreen"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="Station"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/title"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLines="2"
            android:paddingLeft="5dp"
            android:text=" - "
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/location"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLines="2"
            android:paddingLeft="5dp"
            android:text=" - "
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/model"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvBrand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLines="2"
            android:paddingLeft="5dp"
            android:text="@string/thBrand"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/thLastConnect"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvLastConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLines="2"
            android:paddingLeft="5dp"
            android:text="@string/thLastConnect"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/thNozzle"
            android:textSize="10sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/imgDirections"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_directions" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thNozzleNoCom"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thStatus"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/cardNo"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thStartChag"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thStoptChag"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thEndMeter"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1.25"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thUpdateList"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

    </LinearLayout>
    <!--
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    -->
    <com.evthai.view.ItemMetterDialog
        android:id="@+id/itemMetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>