<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreen">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="HISTORY:"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="Station"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        android:orientation="horizontal"
        android:layout_marginTop="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thNozzleNoCom"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/cardNo"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thStartChag"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thStoptChag"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thEndMeter"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />

    </LinearLayout>

    <!--

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

        -->

    <com.evthai.view.ItemMerkerHistory
        android:id="@+id/itemMarkerHis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>