<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNozzle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorLightLightGreen"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/thNozzleNoCom"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tvCardNo"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:text="@string/cardNo"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tvStartChart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorLightLightGreen"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:text="@string/thStartChag"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tvEndChart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="2dp"
            android:text="@string/thStoptChag"
            android:textSize="8sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorLightLightGreen"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEndMetter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"
                android:text="4000"
                android:textSize="8sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="(Wh)"
                android:textSize="8sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>